changed project structure (so that empty jspm baseUrl) to (hopefully) avoid karma-jspm issues

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Chrono Race</title>
-    <link rel="shortcut icon" href="./img/chrono.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/chrono.png" type="image/x-icon">
     <base href="/">
 </head>
 <body>
@@ -16,9 +16,7 @@
 <script src="./jspm.conf.js"></script>
 <script>
     System.import('app/app')
-            .then(function() {
-                // TODO init?
-            })
+            .then(function() {})
             .catch(console.error.bind(console));
 </script>
 <!-- endinject -->
