--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Chrono Race</title>
-    <link rel="shortcut icon" href="./assets/img/chrono.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/chrono.png" type="image/x-icon">
     <base href="/">
 </head>
 <body>
 <div id="chrono-race"></div>
 
-<script src="./jspm_packages/system.js"></script>
-<script src="./jspm.conf.js"></script>
+<script src="jspm_packages/system.js"></script>
+<script src="jspm.conf.js"></script>
 <!-- inject:app:js -->
-<script src="/chrono-race.js"></script>
+<script src="chrono-race.js"></script>
 <!-- endinject -->
 <script>
     System.import('app/app')
