--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src="./jspm_packages/system.js"></script>
 <script src="./jspm.conf.js"></script>
 <!-- inject:app:js -->
-<script src="/chrono-race.js"></script>
+<script src="./chrono-race.js"></script>
 <!-- endinject -->
 <script>
     System.import('app/app')
